fixing li bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,7 @@ header li
 {
   float:left;
   display:inline;
-  padding:0 15px;
+  padding:0 5px;
 }
 
 header a
